fix extranous scrollbar

--- a/_attachments/style/mobile.css
+++ b/_attachments/style/mobile.css
@@ -110,7 +110,6 @@ li .state {
 }
 
 #editheader { 
-    overflow:auto;
     height:45px;
 }
 .btn.back { 
